StringBuilder optimizations, minor changes